# aegis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/agent/: Cargo.toml  build.rs
apps/agent/src/: backup.rs  config.rs  devices.rs  drive.rs  errors.rs  ipc.rs  keychain.rs  logging.rs  main.rs  notifications.rs  recovery.rs  restic.rs  retention.rs  state.rs  usb.rs  verify.rs
apps/ui/frontend/: app.js  index.html  styles.css
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/src/: main.rs
contrib/: aegis-agent.service
docs/: AGENT_SERVICE.md  ipc.md  usb-testing.md
