[package]
name = "aegis-agent"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

axum = "0.7"
bytes = "1"
keyring = "2"
directories = "5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
which = "6"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.8"
